# docusearch

./: .gitignore  BUILD.md  CMakeLists.txt  GET-THE-EXE.md  INSTALL.md  README.md  TEST-RESULTS-FULL.txt  TEST-RESULTS.txt  install.bat  vcpkg.json
.github/workflows/: build.yml  release.yml
installer/: AppxManifest.xml  CleanupUserDb.vbs  DocuSearch.wxs  LICENSE.rtf  heat-filter.xsl
resources/: DocuSearch.exe.manifest  app.qrc  app.rc
resources/themes/: dark.qss  light.qss
scripts/: New-SelfSignedCert.ps1  build-release.ps1  build.ps1  build_and_test.sh  generate-harvest.ps1  generate_icon.py  generate_icons.py
src/: main.cpp
src/backup/: BackupManager.cpp  BackupManager.h
src/core/: Config.cpp  Config.h  Constants.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h  Types.h
src/database/: Database.cpp  Database.h  FileRepository.cpp  FileRepository.h  Schema.cpp  Schema.h
src/documents/: DocumentExtractorRegistry.cpp  DocumentExtractorRegistry.h  DocxExtractor.cpp  DocxExtractor.h  IDocumentExtractor.h  PdfExtractor.cpp  PdfExtractor.h  PptxExtractor.cpp  PptxExtractor.h  TextExtractor.cpp  TextExtractor.h  XlsxExtractor.cpp  XlsxExtractor.h
src/indexer/: ContentIndexer.cpp  ContentIndexer.h  Indexer.cpp  Indexer.h  MetadataIndexer.cpp  MetadataIndexer.h  PriorityScheduler.cpp  PriorityScheduler.h
src/monitoring/: FileWatcher.cpp  FileWatcher.h
src/ocr/: OcrEngine.cpp  OcrEngine.h  OcrWorkerPool.cpp  OcrWorkerPool.h  WindowsOcrEngine.cpp  WindowsOcrEngine.h
src/preview/: ThumbnailGenerator.cpp  ThumbnailGenerator.h
src/search/: QueryParser.cpp  QueryParser.h  SearchEngine.cpp  SearchEngine.h
src/settings/: SettingsManager.cpp  SettingsManager.h
src/ui/: IndexingProgress.cpp  IndexingProgress.h  MainWindow.cpp  MainWindow.h  MetadataPane.cpp  MetadataPane.h  PreviewPane.cpp  PreviewPane.h  ResultsPane.cpp  ResultsPane.h  SearchBar.cpp  SearchBar.h  SettingsDialog.cpp  SettingsDialog.h  TagsNotesPane.cpp  TagsNotesPane.h  Theme.cpp  Theme.h
src/win/: JumpList.cpp  JumpList.h
tests/: CMakeLists.txt  tst_FileRepository.cpp  tst_FileUtils.cpp  tst_PriorityScheduler.cpp  tst_QueryParser.cpp  tst_StringUtils.cpp
